--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -5,6 +5,7 @@
             position: absolute;
             right: 20px;
             top: 12px;
+            display: none;
         }
         .ensure_load{
             display: inline-block;
@@ -98,7 +99,7 @@
         </div>
         <div class="fromInp" style="margin-top: 44px;">
             <label>步骤名称：</label>
-            <input type="text" class="stepName"/>
+            <input type="text" class="stepName auto_save"/>
         </div>
         <!--<div class="fromInp">-->
             <!--<label>输出表名：</label>-->
@@ -106,7 +107,7 @@
         <!--</div>-->
         <div class="fromInp">
             <label>选择表：</label>
-            <select class="fromTable" style="width:160px;height: 28px;margin-left: 25px;">
+            <select class="fromTable auto_save" style="width:160px;height: 28px;margin-left: 25px;">
 
             </select>
             <!--<input id="input" name="input" class="iInput">-->
@@ -121,11 +122,11 @@
             <div class="extractFields" style="float: left;">
 
                 <div class="archive extractField">
-                    <select class="fields" style="width:160px;height: 28px;margin-left: 12px;"/></select>
+                    <select class="fields auto_save" style="width:160px;height: 28px;margin-left: 12px;"/></select>
                     <!--<input type="text" class="fields_inp" id="input"/>-->
                     <div class="regulation">
-                        <span class="add"></span>
-                        <span class="lessen"></span>
+                        <span class="add auto_save"></span>
+                        <span class="lessen auto_save"></span>
                     </div>
                 </div>
 
