--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -4,6 +4,7 @@
             position: absolute;
             right: 20px;
             top: 12px;
+            display: none;
         }
         .ensure_save{
             display: inline-block;
@@ -116,7 +117,7 @@
     </div>
     <div class="fromInp" style="margin-top: 44px;">
         <label>步骤名称：</label>
-        <input type="text" class="stepName"/>
+        <input type="text" class="stepName auto_save"/>
     </div>
     <div class="related_tit">提取字段:</div>
     <table class="related_tab" cellspacing="0">
@@ -128,9 +129,9 @@
         </thead>
         <tbody class="extractFields">
             <tr class="extractField">
-                <td style="width: 40%;"><select class="field"></select></td>
-                <td style="width: 40%;"><input class="alias" type="text" /></td>
-                <td class="regulation"><span class="add extractAdd"></span><span class="lessen extractLessen"></span></td>
+                <td style="width: 40%;"><select class="field auto_save"></select></td>
+                <td style="width: 40%;"><input class="alias auto_save" type="text" /></td>
+                <td class="regulation"><span class="add extractAdd auto_save"></span><span class="lessen extractLessen auto_save"></span></td>
             </tr>
         </tbody>
     </table>
