--- a/plugin/webContent/where/where.html
+++ b/plugin/webContent/where/where.html
@@ -6,6 +6,7 @@
         position: absolute;
         right: 20px;
         top: 12px;
+        display: none;
     }
     .ensure_save{
         display: inline-block;
@@ -133,11 +134,11 @@
 </div>
 <div class="fromInp" style="margin-top: 44px;">
     <label>步骤名称：</label>
-    <input type="text" class="stepName"/>
+    <input type="text" class="stepName auto_save"/>
 </div>
 <div class="fromInp">
     <label>表输出：</label>
-    <input type="text" class="tableOut" style="margin-left: 23px;"/>
+    <input type="text" class="tableOut auto_save" style="margin-left: 23px;"/>
 </div>
 <!--<div class="fromInp">-->
     <!--<label>选择表：</label>-->
@@ -156,9 +157,9 @@
             </thead>
             <tbody class="wheres">
             <tr class="where">
-                <td style="width: 30%"><select class="field"></select></td>
+                <td style="width: 30%"><select class="field auto_save"></select></td>
                 <td style="width: 30%">
-                    <select class="expr">
+                    <select class="expr auto_save">
                         <option>=</option>
                         <option><</option>
                         <option>></option>
@@ -167,8 +168,8 @@
                         <option>like</option>
                     </select>
                 </td>
-                <td><input class="value" type="text" /></td>
-                <td class="regulation"><span class="add onAdd"></span><span class="lessen onLessen"></span></td>
+                <td><input class="value auto_save" type="text" /></td>
+                <td class="regulation"><span class="add onAdd auto_save"></span><span class="lessen onLessen auto_save"></span></td>
             </tr>
             </tbody>
         </table>
