--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -478,7 +478,7 @@
           data:JSON.stringify(val),
           success:function(data){
             if(data.success){
-              layer.msg('保存成功')
+//              layer.msg('保存成功')
               init_actionComp();
             } else {
               layer.msg(data.message)
