作业流更改

--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -266,7 +266,7 @@
           }else if(model=="area") {
             console.log(model)
           }
-//          $("#ele_name").val(obj);
+        $("#ele_name").val(obj.name);
           return true;
         };
         demo.onItemBlur=function(id,model){
@@ -352,6 +352,7 @@
 //              var data = data.data;
               if(data.code == 0) {
                 layer.msg('模板保存成功')
+                window.location.href = 'stencilmanage.html';
               } else {
                 layer.msg(data.message)
               }
