--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             		</div>
             		<!--<img src="https://assets.megvii.com/static%2Fimages/home/megvii_video-7a23aa4a33.jpg" alt=""/>-->
             		<h1 class="title">大数据平台精准服务</h1>
-    				<a href="index.html" class="xdbd-btn">点击进入</a>
+    				<a href="main.html" class="xdbd-btn">点击进入</a>
             	</div>
             </div>
             <div class="swiper-slide">
