切换环境参数

--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -51,9 +51,9 @@
       var $url = '../xdbd-wf';  //../xdbd-wf
       console.log(this_onenv)
 
-      if(this_onenv == '开发环境') {
+      if(this_onenv == 'dev') {
         onenv = true;
-      } else if(this_onenv == '测试环境') {
+      } else if(this_onenv == 'test') {
         onenv = false;
       }
 
