切换环境参数

--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -576,7 +576,7 @@
           var load = {
             "actionId":this_actionId,
             "versionId":this_versionId,
-            "ctionId": this_onenv
+            "active": this_onenv
           }
           $.ajax({
             type:"POST",
