添加公共页面跳转

--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 								<em class="byusername" id="username"></em>
 								<img src="images/down.png" alt="" class="rdown"/>
 								<ul>
-									<li><a href="#">个人中心</a></li>
+									<li><a href="http://192.168.1.43:8086/page/person/person.html">个人中心</a></li>
 									<li><a href="javascript:logOut();" class="active">退出</a></li>
 								</ul>
 							</div>
