--- a/editBI.html
+++ b/editBI.html
@@ -174,7 +174,7 @@
 									<li data-type="110">
 										<div>
 											<img src="images/icon_bar_on.png" alt="" class="fl" />
-											<span>矩阵图<span>
+											<span>矩阵图</span>
 										</div>
 									</li>
 								</ul>
@@ -272,7 +272,7 @@
 									</div>
 								</div>
 								<div class="set-text-size sc-color">
-									<select name="">
+									<select>
 										<option value="1">9</option>
 										<option value="2">10</option>
 										<option selected value="3">12</option>
@@ -502,10 +502,10 @@
 		<div class="f-attr-box clearfix">
 			<div class="f-attr-left fl">
 				<ul class="f-name clearfix">
-					<li class="active"><a href="javascript:;">列表筛选</a></li>
-					<li><a href="javascript:;">文本筛选</a></li>
-					<li><a href="javascript:;">条件筛选</a></li>
-					<li><a href="javascript:;">高级筛选</a></li>
+					<li class="active"><a href="javascript:">列表筛选</a></li>
+					<li><a href="javascript:">文本筛选</a></li>
+					<li><a href="javascript:">条件筛选</a></li>
+					<li><a href="javascript:">高级筛选</a></li>
 				</ul>
 				<div class="f-box">
 					<div class="f-box1">
@@ -742,9 +742,9 @@
 							<option value="61">去年</option>
 						</select>
 						<i class="fa fa-caret-down"></i>
-						<div id="IldToday" class="radio" onclick="timeSng.IldToday(this)">
+						<div id="ildTodayEle" class="radio" onclick="timeSng.IldToday(this)">
 							<img src="images/xuankuang.png" alt="" />
-							<input type="checkbox"/>
+							<input class="checkbox" type="checkbox"/>
 							<span>包含今天</span>
 						</div>
 					</div>
@@ -789,7 +789,6 @@
     <script src="plugin/jQuery/jquery.min.js"></script>
     <script src="plugin/jQuery/jQuery_ui.js"></script>
 	<script src="plugin/d3/d3.v3.min.js"></script>
-	<script  src="plugin/d3/d3.tip.js"></script>
     <script src="plugin/layer/layer.js"></script>
     <script src="plugin/context/context.js"></script>
     <script src="plugin/colorpicker/src/palette-color-picker.min.js"></script>
