添加一个参数

--- a/editBI.html
+++ b/editBI.html
@@ -106,7 +106,7 @@
 						<p>属性</p>
 						<div class="opt-chart-type">
 							<div class="chart-type-val">
-								<span>柱状图</span>
+								<span data-type="101">柱状图</span>
 								<i class="fa fa-caret-down fr"></i>
 							</div>
 							<div class="chart-type-lists">
@@ -789,6 +789,7 @@
     <script src="plugin/jQuery/jquery.min.js"></script>
     <script src="plugin/jQuery/jQuery_ui.js"></script>
 	<script src="plugin/d3/d3.v3.min.js"></script>
+	<script src="plugin/d3/d3.tip.js"></script>
     <script src="plugin/layer/layer.js"></script>
     <script src="plugin/context/context.js"></script>
     <script src="plugin/colorpicker/src/palette-color-picker.min.js"></script>
