修改预览，柱状图

--- a/html/preview.html
+++ b/html/preview.html
@@ -84,6 +84,7 @@
         </div>
     </div>
 </div>
+<div class="hint"></div>
 <!--页面链接弹出框-->
 <div class="link-modal">
     <ul id="modal-tree" class="ztree"></ul>
