修改项目中的bug

--- a/html/preview.html
+++ b/html/preview.html
@@ -46,11 +46,11 @@
                         <a href="#" class="mn-logobox">
                             <img src="../images/mlogo.png" alt="" />
                         </a>
-                        <p class="mn-headtxt">小道科技欢迎您！</p>
+                        <p class="mn-headtxt"><!--小道科技欢迎您！--></p>
                         <ul class="mn-menu clearfix">
-                            <li class="active"><a href="javascript:;">财务</a></li>
+                            <!--<li class="active"><a href="javascript:;">财务</a></li>
                             <li><a href="javascript:;">产品</a></li>
-                            <li><a href="javascript:;">运输</a></li>
+                            <li><a href="javascript:;">运输</a></li>-->
                         </ul>
                     </div>
                     <div class="mn-sider">
