--- a/main.html
+++ b/main.html
@@ -74,7 +74,7 @@
 						</div>
 						<div class="content-col">
 							<div class="content-wrapper">
-								<iframe id="iframepage1" src="html/void.html" scrolling="no" style="width:94.6%;height: 100%;" frameborder=0></iframe>							</div>
+								<iframe id="iframepage1" src="html/void.html" scrolling="no" style="width:100%;height: 100%;" frameborder=0></iframe>							</div>
 						</div>
 					</div>
 					<div class="bd-body bd-body-2">
@@ -171,7 +171,7 @@
 					</div>
 					<div>
 						<label for=""><em>*</em>项目描述：</label>
-						<textarea name="projdesp" placeholder="20个字以内" id="projdesp" maxlength="20"></textarea>
+						<textarea name="projdesp" placeholder="85个字以内" id="projdesp"></textarea>
 					</div>
 					<div>
 						<label for=""><em>*</em>代码库路径：</label>
