作业流更改

--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -352,7 +352,7 @@
             success: function (data) {
               if(data.code == 0) {
                 layer.msg('删除成功')
-                this_data.splice(arr,1)
+                delete this_data[arr];
                alert(JSON.stringify(this_data))
               }
             }, error: function (data) {
