修改测试提出的bug

--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -142,7 +142,7 @@
 								<div class="m-set-navscont">
 									<div class="m-navscont0">
 										<div class="m-tcont-box1">
-											<h3>顶部导航菜单内容</h3>
+											<h3>顶部导航菜单添加</h3>
 											<input type="text" id="head-text" maxlength="50"/>
 											<input type="button" value="确定" id="head-text-btn" />
 										</div>
