--- a/main.html
+++ b/main.html
@@ -143,7 +143,7 @@
 		<div class="proj-attr modal">
 			<h3>项目属性<img src="images/icon_guanbi.png" alt="" class="fr"/></h3>
 			<div class="proj-attr-detail">
-				<div class="item1 item">
+				<!--<div class="item1 item">
 					<p>项目名称：<span>迪庆大数据</span></p>
 					<p>项目ID：<span>迪庆大数据</span></p>
 				</div>
@@ -158,7 +158,7 @@
 					<p>项目描述：<span>迪庆大数据</span></p>
 					<p>代码库路径：<span>迪庆大数据</span></p>
 					<p>调度类型：<span>迪庆大数据</span></p>
-				</div>
+				</div>-->
 			</div>
 		</div>
 		
