作业流bug更改

--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -353,7 +353,7 @@
               if(data.code == 0) {
                 layer.msg('删除成功')
                 delete this_data[arr];
-               alert(JSON.stringify(this_data))
+//               alert(JSON.stringify(this_data))
               }
             }, error: function (data) {
               layer.msg(JSON.stringify(data))
