--- a/html/origin.html
+++ b/html/origin.html
@@ -63,7 +63,7 @@
             <p><label>端口：</label><input class="db_port" type="text" onkeyup="this.value=this.value.replace(/[^\d]/g,'') " onafterpaste="this.value=this.value.replace(/[^\d]/g,'') " placeholder="只能输入数字" /></p>
             <p><label>数据库：</label><input class="db_database" type="text" placeholder="请输入数据库"/></p>
             <p><label>用户名：</label><input class="db_user" type="text" placeholder="请输入用户名"/></p>
-            <p><label>密码：</label><input class="db_password" type="text" placeholder="请输入密码"/></p>
+            <p><label>密码：</label><input class="db_password" type="password" placeholder="请输入密码"/></p>
         </div>
     </div>
     <div class="file-btns-col mcenter">
