--- a/html/stencilmanage.html
+++ b/html/stencilmanage.html
@@ -39,7 +39,7 @@
         <dl class="new_demand" id="new_demand_btn">
             <dt><img src="../images/wendang_xinjian.png"></dt>
             <dd>
-                <p>新建</p>
+                <p>新建作业流</p>
                 <span></span>
             </dd>
         </dl>
