--- a/html/etlStencil.html
+++ b/html/etlStencil.html
@@ -39,7 +39,7 @@
     <dl class="new_demand" onclick="newEtlBtn()">
         <dt><img src="../images/wendang_xinjian.png"></dt>
         <dd>
-            <p>新建</p>
+            <p>新建ETL</p>
             <span></span>
         </dd>
     </dl>
