--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -80,12 +80,10 @@
         .archive{
             position: relative;
         }
-        .archive .fields_inp{
-            position: absolute;
-            left: 2px;
-            top: 0;
-            width: 136px;
-            height: 24px;
+        .archive .remark{
+            display: inline-block;
+            width: 140px;
+            height: 23px;
         }
     </style>
 
@@ -122,8 +120,8 @@
             <div class="extractFields" style="float: left;">
 
                 <div class="archive extractField">
-                    <select class="fields auto_save" style="width:160px;height: 28px;margin-left: 12px;"/></select>
-                    <!--<input type="text" class="fields_inp" id="input"/>-->
+                    <select class="fields auto_save" style="width:150px;height: 28px;margin-left: 12px;"/></select>
+                    <!--<input type="text" class="remark"/>-->
                     <div class="regulation">
                         <span class="add auto_save"></span>
                         <span class="lessen auto_save"></span>
