优化页面流功能及解决测试提出的bug

--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -33,11 +33,11 @@
 		<!--菜单设置-->
 		<div class="edit-state">
 			<div class="top-bar clearfix">
-				<img src="../images/icon_save.png" alt="" title=""/>
-				<img src="../images/icon_prev.png" alt="" title="" />
-				<img src="../images/icon_next.png" alt="" title="" />
-				<img src="../images/icon_fresh.png" alt="" title="" />
-				<img src="../images/icon_preview.png" alt="" title="" id="preview"/>
+				<img src="../images/icon_save.png" alt="" title="" data-tip="保存"/>
+				<img src="../images/icon_prev.png" alt="" title="" data-tip="撤销"/>
+				<img src="../images/icon_next.png" alt="" title="" data-tip="恢复"/>
+				<img src="../images/icon_fresh.png" alt="" title="" id="page-fresh" data-tip="刷新"/>
+				<img src="../images/icon_preview.png" alt="" title="" id="preview" data-tip="预览"/>
 			</div>
 			<div class="drag-bar clearfix">
 				<div class="op-box">
