--- a/html/pageFlow.html
+++ b/html/pageFlow.html
@@ -25,11 +25,11 @@
 		<!--BI页面流-->
 		<div class="edit-state">
 			<div class="top-bar clearfix">
-				<img src="../images/icon_save.png" alt="" id="save-btn"/>
-				<img src="../images/icon_prev.png" alt="" />
-				<img src="../images/icon_next.png" alt="" />
-				<img src="../images/icon_fresh.png" alt="" />
-				<img src="../images/icon_preview.png" alt="" />
+				<img src="../images/icon_save.png" alt="" id="save-btn" data-tip="保存"/>
+				<img src="../images/icon_prev.png" alt="" data-tip="撤销"/>
+				<img src="../images/icon_next.png" alt="" data-tip="恢复"/>
+				<img src="../images/icon_fresh.png" alt="" id="page-fresh" data-tip="刷新"/>
+				<img src="../images/icon_preview.png" alt="" data-tip="预览"/>
 			</div>
 			<div class="drag-bar clearfix">
 				<div class="op-box1 op-box"></div>
