修改筛选中包含、排除、选择全部的bug和部分功能；修改创建后需要移动才能保存的bug

--- a/editBI.html
+++ b/editBI.html
@@ -33,8 +33,8 @@
 			<!--<div class="exit-preview" onclick="operating.exitPreview()"><span>退出预览</span><img src="images/icon_preview.png" alt=""/></div>-->
 
 			<img data-tip="保存" src="images/icon_save.png" alt=""  onclick="operating.save()" />	<!--保存-->
-			<img data-tip="撤销" src="images/icon_prev.png" alt="" />	<!--撤销-->
-			<img data-tip="恢复" src="images/icon_next.png" alt="" />	<!--恢复-->
+			<!--<img data-tip="撤销" src="images/icon_prev.png" alt="" />	&lt;!&ndash;撤销&ndash;&gt;-->
+			<!--<img data-tip="恢复" src="images/icon_next.png" alt="" />	&lt;!&ndash;恢复&ndash;&gt;-->
 			<img data-tip="刷新" src="images/icon_fresh.png" alt="" onclick="operating.refresh()" />	<!--刷新-->
 			<img id="preview" data-tip="预览" src="images/icon_preview.png" alt="" onclick="operating.preview()" />	<!--预览-->
 			<img data-tip="复制" src="images/icon_copy.png" alt="" onclick="operating.copy(id_)" />		<!--复制-->
